# computer_graphics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/shader/: default.fsh  default.vsh
include/: argument.hpp  logger.h  logger.hpp
include/assets/: shader.h  shader.hpp  texture.hpp  vertex_array.h  vertex_array.hpp  vertex_buffer.h  vertex_buffer.hpp
src/: argument.cpp  logger.cpp  main.cpp
src/assets/: shader.cpp  shader.h  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
